<resources>
    <string name="app_name">J1 Student Connect</string>
    <string name="app_name_short">J1SC</string>


    <!-- Login and Register strings -->

    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="student_id">Mã sinh viên</string>
    <string name="password">Mật khẩu</string>
    <string name="retype_password">Nhập lại mật khẩu</string>
    <string name="select_login_type">Chọn phương thức đăng nhập</string>
    <string name="login_redirect">Đã có tài khoản ? Đăng nhập ngay</string>
    <string name="register_redirect">Chưa có tài khoản ? Đăng ký ngay</string>

    <!-- Login and Register strings -->
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="forgot_tutor">Chúng tôi sẽ gửi thông tin về thủ tục lấy lại mật khẩu tới email đã liên kết với tài khoản của bạn</string>
    <string name="send_email">Gửi email</string>

    <!-- Profile strings -->
    <string name="student_name">Tên hiển thị</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="student_class">Lớp</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="edit_profile">Chỉnh sửa</string>
    <string name="edit_profile_full">Chỉnh sửa hồ sơ</string>
    <string name="logout">Đăng xuất</string>

    <!-- Search strings -->
    <string name="search_page">Tra cứu thông tin</string>
    <string name="lookup">Tìm kiếm</string>
    <string name="total_tc">Tổng tín chỉ: [N/A]</string>


    <!-- Bottom Navigation Bar strings -->
    <string name="homepage">Trang chủ</string>
    <string name="search">Tra cứu</string>
    <string name="profile">Hồ sơ</string>

    <!-- Request Add strings -->
    <string name="item1">CẤP BẢNG ĐIỂM</string>
    <string name="item2">ĐỀ NGHỊ HOÃN THI</string>
    <string name="item3">XEM LẠI BÀI THI</string>
    <string name="item4">CẤP LẠI THẺ SV</string>
    <string name="item5">LÀM VÉ BUS</string>
    <string name="item6">XIN THÔI HỌC</string>
    <string name="item7">CẤP CHỨNG CHỈ TN TẠM THỜI</string>
    <string name="item8">ĐỀ NGHỊ HƯỞNG TRỢ CẤP XH</string>

    <!-- Others -->
    <string name="save">Lưu</string>
    <string name="blank">Trống</string>
    <string name="notify">Menu item title</string>
    <string-array name="spinner_semester">
        <item>Học kỳ 1 năm 2022 - 2023</item>
        <item>Học kỳ 2 năm 2022 - 2023</item>
    </string-array>
    <string name="quotes">Trên bước đường thành công không có dấu chân của kẻ lười biếng</string>
    <string name="BehindTheMiniCalen">
        <string name="Recovery">Khôi phục</string>
        <string name="MiniCalendar">Mini Calendar</string>
    </string>
    <string name="ClickToLogin">Bấm để đăng nhập</string>
    <string-array name="request_type_arrays">
        <item>Chọn loại yêu cầu</item>
        <item>Cấp bảng điểm</item>
        <item>Đề nghị hoãn thi</item>
        <item>Xem lại bài thi</item>
        <item>Cấp lại thẻ sinh viên</item>
        <item>Đề nghị làm vé xe bus</item>
        <item>Xin thôi học</item>
        <item>Xin cấp CN tốt nghiệp tạm thời</item>
    </string-array>

    <string-array name="Semester">
        <item>Học kì I</item>
        <item>Học kì II</item>
        <item>Học kì hè</item>
    </string-array>

    <string name="student_info_string">Thông tin\n sinh viên</string>
    <string name="student_class_name">Tên môn học</string>
    <string name="student_class_id">Mã \nlớp học</string>
    <string name="portal_number">Số \ntín chỉ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>

    <!--    Pomodoro-->
    <string name="channel_name">pomodoro_channel</string>
    <string name="channel_name_2">pomodoro_channel2</string>
    <string name="channel_desc">FFFFF</string>
    <string name="channel_desc2">CCCCC</string>

</resources>