<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".authentication.Login"
    android:padding="15sp">

    <TextView
        android:id="@+id/app_name"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#1C594B"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/logo_uet"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_uet" />

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"/>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/select_login_type"
        android:clickable="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:backgroundTint="@color/bg_blue"/>

    <TextView
        android:id="@+id/quotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quotes"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:gravity="center" />

    <ImageView
        android:layout_width="138dp"
        android:layout_height="147dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/login_image" />

</LinearLayout>
